# CameraCast

./: CMakeLists.txt  README.md
client/qt_viewer/: CMakeLists.txt  main.cpp  ws_client_viewer.cpp  ws_client_viewer.h
common/: frame_bundle.h
server/: Dockerfile  entrypoint.sh
server/cam_grabber/: CMakeLists.txt  cam_grabber.cpp  camera_device.h  flir_camera.cpp  flir_camera.h  hikvision_camera.cpp  hikvision_camera.h
server/ws_bridge/: ws_bridge_server.py
